<resources>
    <string name="app_name" translatable="false">NutriLife</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="user">User</string>
    <string name="psw">Password</string>
    <string name="psw2">Repeat password</string>
    <string name="create_account">Create account</string>
    <string name="cancel">Cancel</string>
    <string name="new_user">New user</string>
    <string name="app_phrase" translatable="false">Your health companion</string>
    <string name="dailygoal">Daily Goal</string>
    <string name="remainning">Remainning</string>
    <string name="_1800" translatable="false">1800</string>
    <string name="cal" translatable="false">cal</string>
    <string name="_790" translatable="false">790</string>
    <string name="_1010" translatable="false">1010</string>
    <string name="calories_consumed">calories consumed</string>
    <string name="protein">Protein</string>
    <string name="_64" translatable="false">64</string>
    <string name="g" translatable="false">g</string>
    <string name="of" translatable="false">of</string>
    <string name="_150" translatable="false">150</string>
    <string name="carb" translatable="false">Carb</string>
    <string name="_96" translatable="false">96</string>
    <string name="fat">Fat</string>
    <string name="_42" translatable="false">42</string>
    <string name="water_intake">Water Intake</string>
    <string name="_6" translatable="false">0</string>
    <string name="barra" translatable="false">/</string>
    <string name="_8" translatable="false">8</string>
    <string name="glasses">glasses</string>
    <string name="weekly_progress">Weekly Progress</string>
    <string name="_1_2" translatable="false">-1.2</string>
    <string name="kg" translatable="false">kg</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

    <!-- Profile -->

    <string name="user_name" translatable="false">MiniChen</string>
    <string name="member_since">Member Since 2026</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_stats">My Stats</string>
    <string name="current_weight">Current Weight:</string>
    <string name="weight_value" translatable="false">68lb</string>
    <string name="age_label">Age:</string>
    <string name="age_value">25 years</string>
    <string name="height_label">Height:</string>
    <string name="height_value" translatable="false">1.75</string>
    <string name="activity_level_label">Activity Level:</string>
    <string name="activity_level_value">Moderate</string>
    <string name="daily_goals">Daily Goals</string>
    <string name="daily_calorie_goal">Daily Calorie Goal</string>
    <string name="protein_goal">Protein Goal (g)</string>
    <string name="carbs_goal">Carbs Goal (g)</string>
    <string name="fats_goal">Fats Goal (g)</string>
    <string name="water_goal">Water Goal (glasses)</string>
    <string name="sign_out">Sign out</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="userName">User Name</string>
    <string name="sedentary">Sedentary</string>
    <string name="light">Light</string>
    <string name="moderate">Moderate</string>
    <string name="active">Active</string>
    <string name="very_active">Very Active</string>
    <string-array name="activity_levels">
        <item>@string/sedentary</item>
        <item>@string/light</item>
        <item>@string/moderate</item>
        <item>@string/active</item>
        <item>@string/very_active</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dashboard">dashboard</string>
    <string name="meals">meals</string>
    <string name="goals">goals</string>
    <string name="profile">profile</string>
    <string name="water_master">Water Master</string>
    <string name="complete_your_daily_water_intake">Complete your daily water intake</string>
    <string name="carb_champion">Carb Champion</string>
    <string name="hit_your_daily_carb_target">Hit your daily carb target</string>
    <string name="protein_hunter">Protein Hunter</string>
    <string name="hit_your_daily_protein_target">Hit your daily protein target</string>
    <string name="fat_strategist">Fat Strategist</string>
    <string name="optimize_your_healthy_fat_intake">Optimize your healthy fat intake</string>
    <string name="new_food_try">New Food Try</string>
    <string name="create_a_new_food">Create a new Food</string>
    <string name="diet_goal">Diet goal</string>
    <string name="not_completed">Not completed</string>
    <string name="add_food_to_lunch">Add Food To Lunch</string>
    <string name="search_food">Search food...</string>
    <string name="new_food">New Food</string>
    <string name="crear_nuevo_alimento">Create new food</string>
    <string name="nombre_del_alimento">Food Name</string>
    <string name="ej_pechuga_de_pollo">E.g. rice</string>
    <string name="calor_as_kcal">Calories (kcal)</string>
    <string name="ej_250">E.g. 250</string>
    <string name="protein_g" translatable="false">Protein (g)</string>
    <string name="carbs_g" translatable="false">Carbs (g)</string>
    <string name="fat_g" translatable="false">Fat (g)</string>
    <string name="add">Add</string>

    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>

</resources>