<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="18dp"
    app:cardBackgroundColor="@color/white"
    app:strokeWidth="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- Campos de usuario -->
        <EditText
            android:id="@+id/etUserName"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:hint="@string/userName"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="12dp"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etWeight"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:hint="@string/current_weight"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="12dp"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/etUserName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etHeight"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:hint="@string/height_label"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="12dp"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/etWeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etAge"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:hint="@string/age_label"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="12dp"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/etHeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Spinner
            android:id="@+id/spinnerActivity"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/etAge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Botones al final -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/spinnerActivity">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveProfile"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="5dp"
                android:text="@string/save_changes"
                android:background="@drawable/save_btn_selector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnCancelProfile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancelProfile"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:text="@string/cancel"
                android:background="@drawable/cancel_btn_selector"
                app:layout_constraintStart_toEndOf="@id/btnSaveProfile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>