<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.Login">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/girl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/gradient2"
        android:alpha=".30"
        />

    <ImageView
        android:id="@+id/ic_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="160dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til1"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="@id/gl1"
        app:layout_constraintEnd_toEndOf="@id/gl2"
        app:layout_constraintTop_toBottomOf="@id/ic_icon">

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:background="@drawable/corner"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:singleLine="true"
            android:hint="@string/user"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="@id/gl1"
        app:layout_constraintEnd_toEndOf="@id/gl2"
        app:layout_constraintTop_toBottomOf="@id/til1">

        <EditText
            android:id="@+id/password"
            android:background="@drawable/corner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/psw"
            android:singleLine="true"
            android:drawablePadding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/verde"
        app:layout_constraintStart_toStartOf="@id/gl1"
        app:layout_constraintEnd_toEndOf="@id/gl2"
        app:layout_constraintTop_toBottomOf="@id/til2"
        style="@style/Button1"

        android:onClick="openProfile"/>

    <Button
        android:id="@+id/btn_signUp"

        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/signup"
        style="@style/Button2"
        app:layout_constraintStart_toStartOf="@id/gl1"
        app:layout_constraintEnd_toEndOf="@id/gl2"
        app:layout_constraintTop_toBottomOf="@id/btn_login"

        android:onClick="openRegister"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".2"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8"/>


</androidx.constraintlayout.widget.ConstraintLayout>